# tax-avoidance-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/skills/tax-avoidance/: SKILL.md
.agents/skills/tax-avoidance/agents/: openai.yaml
.agents/skills/tax-avoidance/references/: codex-app-quickstart.md  platform-notes.md  source-map.md  state-support.md  supported-returns.md  workflow.md
.agents/skills/tax-avoidance/scripts/: assemble_return.py  normalize_docs.py  run_tax_flow.py  tax_flow_common.py
.claude-plugin/: marketplace.json
examples/: contractor-and-investment-input.json  contractor-zero-expenses-input.json  deduction-review-input.json
plugins/tax/: README.md
plugins/tax/.claude-plugin/: plugin.json
plugins/tax/commands/: prep.md
plugins/tax/skills/: tax-avoidance
tests/fixtures/: cases.json
tests/scenarios/: test_tax_flow.py
